# cpp-oop

./: .gitignore  CMakeLists.txt  README.md  README.skills.md  Readme.simpler_start.md  cpp-oop.code-workspace
lectia00_introductiva/: Readme.md
lectia00_introductiva/subiect1/: hint_a.md  hint_b.md
lectia01_introductiva/: Readme.md
lectia01_introductiva/exercitiu1_cuburi/: README.md  main.cpp
lectia01_introductiva/exercitiu2_erbivor/: README.md  main.cpp
lectia01_introductiva/exercitiu3_transport/: README.md  main.cpp
lectia01_introductiva/exercitiu4_festival/: README.md  main.cpp
lectia02_introductiva/: main.cpp
lectia02_introductiva/subiect1/: Readme.md  hint_c.md
lectia02_introductiva/subiect2/: main2.cpp
lectia02_introductiva/subiect3/: main3.cpp
lectia03_introductiva/: Readme.md
lectia03_introductiva/exercitiu1_containere/: README.md  main.cpp
lectia03_introductiva/exercitiu2_transport/: README.md  main.cpp
lectia03_introductiva/exercitiu3_alergatori/: README.md  main.cpp
lectia03_introductiva/exercitiu4_ecosistem/: README.md  main.cpp
private/: EXERCITII_README.md
subiecte_colocvii/: colocviu1.cpp  colocviu11.cpp  sub1.md  sub10test.cpp  sub1test.cpp  sub2test.cpp  sub3test.cpp  sub4test.cpp  sub5test.cpp  sub6test.cpp  sub7test.cpp  sub8test.cpp  sub9test.cpp
