cmake_minimum_required(VERSION 4.1)
project(cpp_oop)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp_oop
        lectia03_introductiva/exercitiu1_containere/main.cpp
        lectia03_introductiva/exercitiu2_transport/main.cpp
        lectia03_introductiva/exercitiu3_alergatori/main.cpp
        lectia03_introductiva/exercitiu4_ecosistem/main.cpp
)
